<resources>
    <string name="Indication">Clique no botao e veja como pode dor sange se quiser</string>
    <string name="text_orientation">Clique no botão e veja o passo a passo para quem você pode doar ou receber sangue</string>
    <string name="Sangue">Sangue</string>
    <string name="Inicio">Inicio</string>
    <string name="a_pergunta_aparecera_aui">A pergunta aparecera aui...</string>
    <string name="Consultar">Consultar</string>
    <string name="b">B+</string>
    <string name="a">A+</string>
    <string name="o">O+</string>
    <string name="O">O+</string>
    <string name="OO">O-</string>
    <string name="grupoAn">A-</string>
    <string name="grupoABn">AB-</string>
    <string name="grupoABp">AB+</string>
    <string name="grupoBn">B-</string>
    <string name="grupoB">B-</string>
    <string name="abN">AB-</string>
    <string name="bN">B-</string>
    <string name="aN">A-</string>
    <string name="oN">O-</string>
    <string name="abP">AB+</string>
    <string name="bP">B+</string>
    <string name="localiza_o_pr_xima">localização próxima</string>
    <string name="agenda_doa_o">Agenda doação</string>
    <string name="localiza_pr_xima">Localização próxima</string>
    <string name="Estoque">Estoque</string>
    <string name="Blog_saude">Blog Saude</string>
    <string name="Localizaoao_proxima">Localizaoao proxima</string>
    <string name="Eventos">Eventos</string>
    <string name="Contatos">Contatos</string>
    <string name="Agenda_doa_ao">Agenda Doaçao</string>
    <string name="Sair">Sair</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer close</string>
    <string name="blog_saude">Blog saude</string>
    <string name="estoque">Estoque</string>
    <string name="contatos">Contatos</string>
    <string name="saiba_mais">Saiba mais</string>
    <string name="eventos">Eventos</string>
    <string name="servi_os">Serviços</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="informa_ao">Informaçao</string>
    <string name="perfil">Perfil</string>
    <string name="localiza_o_pr_xim">Localização próxima</string>
    <string name="not_cias">Notícias</string>
    <string name="agenda_doa_">Agenda doação</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label" />
    <string name="app_name">Hermosc</string>
    <string name="grupo_sanguineo">Grupo sanguineo</string>
    <string name="aperte_no_bot_o_relacionado_ao_teu_grupo_sanguineo">Aperte no botão relacionado ao teu grupo sanguineo</string>
    <string name="compartilha">Compartilhar</string>
    <string name="informa_">Informação</string>
    <string name="entrar">Entrar</string>
    <string name="seja_bem_vindo_a">Seja bem-vindo(a)</string>
    <string name="ol">Olá,</string>
    <string name="continuar">Continuar</string>
    <string name="inicio">Inicio</string>
    <string name="florian_polis">Florianópolis</string>
    <string name="rua_theodoro_holtrup_40_vila_nova_89_035_300">Rua Theodoro Holtrup, 40 Vila Nova- 89.035-300</string>
    <string name="chapec">Chapecó</string>
    <string name="telefone">Telefone</string>
    <string name="_48_3251_9702">(48)3251.9702</string>
    <string name="av_othon_gama_d_e_a_756_centro_88015_240">Av.Othon Gama D\'Eça, 756 Centro-88015-240</string>
    <string name="hemocentro_coordenador">Hemocentro Coordenador</string>
</resources>