<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:id="@+id/drawer_layout"
    tools:context=".DashoardActivity">






  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:overScrollMode="never"
      android:scrollbars="none"
      android:layout_marginBottom="60dp"
      app:layout_constraintBottom_toBottomOf="parent"
      >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


      <LinearLayout
          android:id="@+id/layoutHeader"
          android:layout_width="match_parent"
          android:layout_height="158dp"
          android:background="@drawable/background_cabecalho"
          android:layout_marginTop="44dp"
          android:orientation="horizontal"
          app:layout_constraintTop_toTopOf="parent"
          tools:ignore="MissingConstraints"
          >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/baseline_perfil"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Olá,"
            android:textSize="30dp"
            android:paddingTop="25dp"
            android:textColor="@color/white"
            android:textStyle="normal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:padding="6dp"
            android:text="Meu nome"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="italic"
            />

      </LinearLayout>


      <LinearLayout
          android:foreground="?attr/selectableItemBackground"
          android:clickable="true"
          android:id="@+id/card1"
          android:layout_marginTop="22dp"
          android:background="@drawable/background_boder"
          android:gravity="center"
          app:layout_constraintEnd_toStartOf="@id/card2"
          app:layout_constraintDimensionRatio="H,1:1"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/layoutHeader"
          android:layout_width="168dp"
          android:layout_height="90dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="55dp"

            android:contentDescription="@string/app_name"

            android:src="@drawable/blogging01"/>

        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/blog_saude"
            android:textColor="#686767"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/baseline_chevron_right_24"/>

      </LinearLayout>

      <LinearLayout
          android:foreground="?attr/selectableItemBackground"
          android:clickable="true"
          android:id="@+id/card2"
          android:layout_marginTop="22dp"
          android:background="@drawable/background_boder"
          android:gravity="center"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@id/card1"
          app:layout_constraintDimensionRatio="H,1:1"
          app:layout_constraintTop_toBottomOf="@id/layoutHeader"

          android:layout_width="168dp"
          android:layout_height="90dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="55dp"

            android:contentDescription="@string/app_name"
            android:src="@drawable/lucro03" />



        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/estoque"
            android:textColor="#686767"
            android:textStyle="bold"
            />


        <ImageView
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/baseline_chevron_right_24"/>

      </LinearLayout>

      <LinearLayout
          android:foreground="?attr/selectableItemBackground"
          android:clickable="true"
          android:id="@+id/card3"
          android:layout_marginTop="22dp"
          android:background="@drawable/bg_branco"
          android:gravity="center"
          android:orientation="vertical"
          android:padding="15dp"
          android:elevation="18dp"
          app:layout_constraintDimensionRatio="H,1:1"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toStartOf="@id/card2"
          app:layout_constraintTop_toBottomOf="@id/card1"
          android:layout_width="168dp"
          android:layout_height="168dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/baseline_localisation_24"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/localiza_pr_xima"
            android:textColor="#686767"
            android:textStyle="normal"
            />

      </LinearLayout>

      <LinearLayout
          android:foreground="?attr/selectableItemBackground"
          android:clickable="true"
          android:id="@+id/card4"
          android:layout_marginTop="22dp"
          android:background="@drawable/bg_branco"
          android:gravity="center"
          android:orientation="vertical"
          android:padding="15dp"
          android:elevation="18dp"
          app:layout_constraintDimensionRatio="H,1:1"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@id/card1"
          app:layout_constraintTop_toBottomOf="@id/card2"
          android:layout_width="168dp"
          android:layout_height="168dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/baseline_agenda_time_24"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/agenda_doa_o"
            android:textColor="#686767"
            android:textStyle="normal"
            />

      </LinearLayout>

      <LinearLayout
          android:foreground="?attr/selectableItemBackground"
          android:clickable="true"
          android:id="@+id/card5"
          android:layout_marginTop="22dp"
          android:background="@drawable/bg_branco"
          android:gravity="center"
          android:orientation="vertical"
          android:padding="15dp"
          android:elevation="18dp"
          app:layout_constraintDimensionRatio="H,1:1"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toStartOf="@id/card4"
          app:layout_constraintTop_toBottomOf="@id/card3"
          android:layout_width="168dp"
          android:layout_height="168dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/baseline_history_edu_24"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Histórico"
            android:textColor="#686767"
            android:textStyle="normal"
            />

      </LinearLayout>

      <LinearLayout
          android:foreground="?attr/selectableItemBackground"
          android:clickable="true"
          android:id="@+id/card6"
          android:layout_marginTop="22dp"
          android:background="@drawable/bg_branco"
          android:gravity="center"
          android:orientation="vertical"
          android:padding="15dp"
          android:elevation="18dp"
          app:layout_constraintDimensionRatio="H,1:1"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@id/card3"
          app:layout_constraintTop_toBottomOf="@id/card4"
          android:layout_width="168dp"
          android:layout_height="168dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/baseline_event_seat_24"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/eventos"
            android:textColor="#686767"
            android:textStyle="normal"
            />

      </LinearLayout>

      <RelativeLayout
          android:id="@+id/Banner"
          android:layout_width="match_parent"
          android:layout_height="200dp"
          android:layout_marginTop="15dp"
          android:padding="10dp"
          android:layout_margin="15dp"
          app:layout_constraintEnd_toEndOf="@id/card6"
          app:layout_constraintStart_toStartOf="@id/card5"
          app:layout_constraintTop_toBottomOf="@id/card5">

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iss_auto_cycle="true"
            app:iss_corner_radius="20"
            app:iss_period="1000"
            app:iss_delay="1000"
            android:textAlignment="center"
         />

      </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

  </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>